
This file lists all changes in the public Equalizer API, latest on top:

29/Mar/2011
  Changed
    uint32_t eq::Version::getRevision();
  to:
    std::string eq::Version::getRevision();


-----------------------------------1.0-------------------------------------

14/Mar/2011
  Changed object mapping behavior when using a concrete version from:
    If the requested version does no longer exist, mapObject() will fail.
  to:
    If a concrete requested version no longer exists, mapObject() will
    map the oldest available version.

  Moved include/GL to include/eq/GL. Use '#include <eq/gl.h>' to include
  OpenGL headers only.

10/Mar/2011
  Do not include window system headers by default to avoid global
  namespace pollution. Define EQ_SYSTEM_INCLUDES before including
  eq/eq.h to get previous definitions.

01/Mar/2011
  Added new 'incarnation' parameter to co::Object::commit, with a
  default parameter selecting the previous behavior for commit wrt auto
  obsoletion. co::Object::commitNB has the same new parameter, with no
  default value.

--------------------------------1.0 beta-----------------------------------

10/Feb/2011
  Changed GLXWindow implementation to use GLXFBConfigs. Use GLXFBConfigs
  in place of XVisualInfo for the appropriate GLXWindow methods.

14/Jan/2011
  libEqualizer links libCollage dynamically, not statically.
  All libraries use correct versioning as mandated by the operating system.

-------------------------------1.0 alpha-----------------------------------

7/Jan/2011
  Rename EVENT_POINTER_* to differantiate channel and window pointer events.
  Old values can be used when EQ_USE_DEPRECATED is defined.
  
     CHANNEL_POINTER_MOTION         // = POINTER_MOTION
     CHANNEL_POINTER_BUTTON_PRESS   // = POINTER_BUTTON_PRESS
     CHANNEL_POINTER_BUTTON_RELEASE // = POINTER_BUTTON_RELEASE
     WINDOW_POINTER_WHEEL           // = POINTER_WHEEL
     WINDOW_POINTER_MOTION  
     WINDOW_POINTER_BUTTON_PRESS
     WINDOW_POINTER_BUTTON_RELEASE